<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <com.juniperphoton.flipperlayout.FlipperLayout
        android:id="@+id/flipper_layout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:defaultIndex="0"
        app:flipAxis="X"
        app:flipDirection="backToFront"
        app:tapToFlip="false">

        <TextView
            style="@style/btn"
            android:text="@string/tap_me_0"/>

        <TextView
            style="@style/btn"
            android:text="@string/keep_tapping_1"/>

        <TextView
            style="@style/btn"
            android:text="@string/tap_me_please_2"/>

        <TextView
            style="@style/btn"
            android:text="@string/don_t_stop_3"/>

        <TextView
            style="@style/btn"
            android:text="@string/ok_that_s_a_stop_4"/>
    </com.juniperphoton.flipperlayout.FlipperLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"/>

        <Button
            android:id="@+id/prev_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev"/>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"/>

        <Button
            android:id="@+id/refresh_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refresh_current"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/entities"/>
    </LinearLayout>
</FrameLayout>
